--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CodeforcesRecentActions"
+        android:theme="@style/Theme.CodeforcesBlogWidget"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
@@ -22,7 +22,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.CodeforcesRecentActions">
+            android:theme="@style/Theme.CodeforcesBlogWidget">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
