filtering using llama 3.2 3b in api

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,2 +1,16 @@
-__pycache__
+# Python
+__pycache__/
+*.pyc
+
+# Model files and cache
+.cache/
+models/
+*.bin
+*.pt
+*.pth
+*.safetensors
+transformers_cache/
+
+# Project specific
 output
+*.json
