--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,8 @@
-fastapi
-uvicorn
+fastapi==0.109.2
+uvicorn==0.27.1
 botasaurus
 python-multipart
-aiofiles 
+aiofiles
+beautifulsoup4==4.12.3
+requests==2.31.0
+httpx==0.27.0 
