--- a/.github/workflows/fdroid.yml
+++ b/.github/workflows/fdroid.yml
@@ -11,12 +11,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Remove Unnecessary Files
+      - name: Move App Contents to Root and Clean Up
         run: |
-          shopt -s extglob
-          mv app /tmp/app_backup
-          rm -rf !(app)
-          mv /tmp/app_backup app
+          rm -rf .github  # Remove GitHub Actions folder
+          rm -f .gitignore  # Remove .gitignore if present
+          mv app/* .  # Move all files inside app/ to the root
+          rm -rf app  # Remove the now-empty app directory
 
       - name: Commit and Push to fdroid Branch
         run: |
@@ -24,5 +24,5 @@ jobs:
           git config --global user.email "pavitchhabra1611@gmail.com"
           git checkout -B fdroid
           git add .
-          git commit -m "Prepare F-Droid branch: Keep only app directory"
+          git commit -m "Prepare F-Droid branch: Move app to root and clean up"
           git push origin fdroid --force
